# imlib2

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  imlib2.spec.in
debian/: changelog  control  copyright  imlib2-config.1  libimlib2-dev.install  libimlib2.install  libimlib2.symbols  rules  watch
debian/patches/: 01_removed-data-dir.patch  series
doc/: Makefile.in
src/: Makefile.in
src/lib/: Imlib2.h  Makefile.am  Makefile.in  api.c  blend.c  blend.h  common.h  context.c  context.h  draw.c  dynamic_filters.c  dynamic_filters.h  ellipse.c  file.c  file.h  filter.c  font.h  font_draw.c  font_load.c  font_main.c  grab.c  grad.c  grad.h  image.c  image.h  loaders.c  loaders.h  modules.c  rend.c  rgba.h  rgbadraw.c  rotate.c  scale.c  script.c  script.h  span.c  span.h  ximage.c  ximage.h
src/modules/: Makefile.in
src/modules/filters/: Makefile.am  Makefile.in
src/modules/loaders/: Makefile.am  Makefile.in  loader_argb.c  loader_bmp.c  loader_bz2.c  loader_common.h  loader_ff.c  loader_gif.c  loader_ico.c  loader_id3.c  loader_jpeg.c  loader_lbm.c  loader_png.c  loader_pnm.c  loader_tga.c  loader_tiff.c  loader_webp.c  loader_xbm.c  loader_xpm.c  loader_zlib.c
